# PhotonDust

./: .gitignore  CMakeLists.txt  README.md
assets/models/: plane.glb
assets/scenes/: cornell.json  default.json
include/: Camera.hpp  EventHandler.hpp  MainContext.hpp  SettingsCache.hpp  Storage.hpp  UI.hpp  Window.hpp  WorkContext.hpp  ve_log.hpp
include/vk/: Buffer.hpp  CommandPool.hpp  DescriptorSetHandler.hpp  ExtensionsHandler.hpp  Histogram.hpp  Image.hpp  Instance.hpp  LogicalDevice.hpp  Mesh.hpp  Model.hpp  PathTraceBuilder.hpp  PathTracer.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Swapchain.hpp  Synchronization.hpp  Timer.hpp  VulkanCommandContext.hpp  VulkanMainContext.hpp  common.hpp
shader/: compile_shader.py  histogram.comp  image.frag  image.vert  path_trace.comp  spectral.glsl  structs.glsl
shader/include/: colormaps.glsl  random.glsl  spectral.glsl  structs.glsl
src/: Camera.cpp  EventHandler.cpp  MainContext.cpp  SettingsCache.cpp  Storage.cpp  UI.cpp  Window.cpp  WorkContext.cpp  main.cpp
src/vk/: CommandPool.cpp  DescriptorSetHandler.cpp  Histogram.cpp  Image.cpp  Instance.cpp  LogicalDevice.cpp  Mesh.cpp  Model.cpp  PathTraceBuilder.cpp  PathTracer.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Swapchain.cpp  Synchronization.cpp  Timer.cpp  VulkanCommandContext.cpp  VulkanMainContext.cpp
